<resources>
    <string name="app_name">Export-Expert Indonesia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="beranda">Beranda</string>
    <string name="pengaturan_app">Pengaturan App</string>
    <string name="akun">Akun</string>
    <string name="ada_berita_baru_untuk_kami">Mau belajar apa hari ini</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="cari_berita">Cari berdasarkan judul / hastag</string>
    <string name="simpan">Simpan</string>
    <string name="judul_postingan">Judul Postingan</string>
    <string name="personal">Personal</string>
    <string name="tentang">Tentang</string>
    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="melanjutkan_sebagai_tamu">Melanjutkan Sebagai Tamu?</string>
    <string name="browse_poster">Browse Poster</string>
    <string name="konten_post">Konten Post</string>
    <string name="gambar_poster">Gambar Poster</string>
    <string name="hapus_data">Hapus Data</string>
    <string name="yakin_batal_menghapus">Apakah anda ingin menghapus ?</string>
    <string name="yakin_menghapus">Apakah anda yakin ingin menghapus postingan ini?</string>
    <string name="batal">Batal</string>
    <string name="tidak_ada_data">Tidak ada data</string>

    <string name="bg_splash">Splash Screen</string>
    <string name="nama_app">Nama Aplikasi</string>
    <string name="desc_app">Deskripsi Aplikasi</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="browse_logo_baru">Browse logo baru</string>
    <string name="browse_background_splash_screem">Browse background splash screen</string>
    <string name="background_splash_screen">Background splash screen</string>
    <string name="deskripsi_aplikasi">Deskripsi Aplikasi</string>
    <string name="nama_aplikasi_saat_ini">Nama aplikasi saat ini</string>
    <string name="url_link">Url Link</string>
    <string name="judul_hyperlink">Judul HyperLink</string>
    <string name="link_url_video_youtube">Link URL Video Youtube</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="apa_yang_terbaru">Apa yang terbaru.</string>
    <string name="podcast">Podcast</string>
    <string name="tipsdantricks">Tips dan Trik</string>
    <string name="event">Event</string>
    <string name="mitra">Mitra</string>
    <string name="berita">Berita</string>
    <string name="komunitas">Komunitas</string>
    <string name="tipe_postingan">Tipe Postingan</string>
    <string name="hastag">Hastag</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="temukan_kami_di">Temukan kami di</string>
    <string name="sosial_media">Sosial Media</string>
    <string name="Whatsapp">Whatsapp</string>
    <string name="Telegram">Telegram</string>
    <string name="Instagram">Instagram</string>
    <string name="Tiktok">Tiktok</string>
    <string name="Facebook">Facebook</string>
    <string name="Linkedn">Linkedn</string>
    <string name="Email">Email</string>
    <string-array name="type_array">
        <item>@string/podcast</item>
        <item>@string/tipsdantricks</item>
        <item>@string/berita</item>
        <item>@string/event</item>
        <item>@string/mitra</item>
        <item>@string/komunitas</item>
    </string-array>
    <string-array name="data_title_menu">
        <item>@string/podcast</item>
        <item>@string/tipsdantricks</item>
        <item>@string/event</item>
        <item>@string/mitra</item>
        <item>@string/berita</item>
        <item>@string/komunitas</item>
    </string-array>

    <array name="data_ic_menu">
        <item>@drawable/ic_podcast</item>
        <item>@drawable/ic_tips</item>
        <item>@drawable/ic_event</item>
        <item>@drawable/ic_mitra</item>
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_comunity</item>
    </array>
    <string-array name="data_title">
        <item>@string/nama_app</item>
        <item>@string/logo_aplikasi</item>
        <item>@string/desc_app</item>
        <item>@string/bg_splash</item>
        <item>@string/sosial_media</item>
    </string-array>

    <array name="data_ic">
        <item>@drawable/ic_sname</item>
        <item>@drawable/ic_slogo</item>
        <item>@drawable/ic_sdesc</item>
        <item>@drawable/ic_sscreen</item>
        <item>@drawable/social_media</item>
    </array>
</resources>