<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FEFEFE"
    tools:context=".ui.admin.beranda.fragment.BerandaFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/m_16"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/selamat_datang"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginRight="@dimen/m_16"
                android:layout_marginLeft="@dimen/m_16"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginRight="@dimen/m_16"
                android:layout_marginLeft="@dimen/m_16"
                android:text="@string/ada_berita_baru_untuk_kami"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_gravity="right"
            android:layout_margin="@dimen/m_16"
            android:src="@drawable/ic_hello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="Menu"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/m_16"
                android:layout_marginRight="@dimen/m_16"
                android:layout_marginTop="@dimen/m_8"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m_16"
                android:layout_marginRight="@dimen/m_16"
                android:layout_marginTop="@dimen/m_32"
                android:layout_marginBottom="@dimen/m_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_menu"
                tools:listitem="@layout/item_menu"
                app:spanCount="3"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

            <TextView
                android:id="@+id/tvwhatnew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m_16"
                android:layout_marginTop="@dimen/m_16"
                android:fontFamily="@font/poppins"
                android:text="@string/apa_yang_terbaru"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.187"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_menu"
                app:layout_constraintVertical_bias="0.0" />
            <ImageView
                android:visibility="invisible"
                android:id="@+id/noData"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="@dimen/m_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_lihata"
                />

            <TextView
                android:id="@+id/tvnodata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/tidak_ada_data"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noData" />
            <TextView
                android:id="@+id/btn_lihata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:text="@string/lihat_semua"
                android:gravity="right"
                android:clickable="true"
                android:visibility="gone"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginRight="@dimen/m_16"
                android:layout_marginLeft="@dimen/m_16"
                android:layout_marginTop="@dimen/m_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.187"
                app:layout_constraintTop_toBottomOf="@+id/tvwhatnew"
                app:layout_constraintVertical_bias="0.0"/>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/swipeContainer"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginRight="@dimen/m_16"
                android:layout_marginLeft="@dimen/m_16"
                android:layout_marginTop="@dimen/m_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.187"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_lihata"
                app:layout_constraintVertical_bias="0.0">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNews"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"

                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                    tools:listitem="@layout/item_card" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginRight="@dimen/m_16"
                android:layout_marginLeft="@dimen/m_16"
                android:layout_marginTop="@dimen/m_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.187"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_lihata"
                app:layout_constraintVertical_bias="0.0">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <include layout="@layout/shimmer_item_card"/>
                    <include layout="@layout/shimmer_item_card"/>
                    <include layout="@layout/shimmer_item_card"/>

                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>
<!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                android:id="@+id/btn_add"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="200dp"-->
<!--                android:layout_margin="@dimen/m_16"-->
<!--                android:src="@drawable/ic_baseline_add_24"-->
<!--                app:rippleColor="@color/white"-->
<!--                android:backgroundTint="@color/bg_floating"-->
<!--                android:tint="@color/white"-->
<!--                app:tint="@android:color/white"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="1.0" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>